[19.October 2008]
- TiledMapLoadStrategy: yesterday I solved ancient "stupid problem" in Map,
  so today I could delete line which was here to "solve" it by adding one
  more row of tiles at the top of a map

[18.October 2008]
- tests: removed class TestMap2
- TestMap: tests which helped me better understand Map#area_free?
- Rect#new_from_points, Rect#center
- Map: solved "dirty thing problem"!
- level ArcticTutorial: EXIT moved 40 px down (fix because of change in Map)

[6.October 2008]
- xmlmap2loadstrategy.rb: implemented loading 'old XML maps'
  (most of freeVikings maps are in this format)
- *map2*.rb: files renamed to *map*.rb (old Map and relatives replaced)
- tile.rb removed (useless now)
- *map*.rb: class names etc. modified ("2" removed: Map2 => Map etc.)

[4.October 2008]
- map2.rb: implemented methods paint_background and paint_foreground
- tiledmap2loadstrategy.rb: implemented surface creation.

[3.October 2008]
- tiledmaploadstrategy.rb, xmlmaploadstrategy.rb: moved from freeVikings
- tiledmap2loadstrategy.rb, map2.rb, map2loadstrategy.rb:
  currently usable with freeVikings (collisions work, graphics not yet)

[2.October 2008]
- map2.rb, tiledmap2loadstrategy.rb : development of new Map class 
  for freeVikings and associated loaders started
- some tests removed

[18.September 2008]
- entity.rb, group.rb: Up to now every Entity had just one rectangle common
  for collisions and graphics. Now these two can be defined different
  (usually the collision rect is smaller and inside the graphics rect)

[10.September 2008]
- schwerengine.rb: Log4r isn't loaded if it has been loaded before
  (it's a small hack for freeVikings :) )

[28. August 2008]
- Location.<< now returns the Location itself (so you can write 
  C++-streams-like chained expressions)
- new methods for (Rectangle.new_empty; empty? bottom=,right=, area, common)
- Location now "gives" itself to ActiveObjects during their registering in 
  the same way as to Sprites